<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/table_blue2"
    tools:context=".GameActivity">

    <TextView
        android:id="@+id/tv_winOut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/bowlby_one_sc"
        android:textColor="#FF5722"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_play"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_chip_10"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/tv_dealerOut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/bowlby_one_sc"
        android:textColor="#FF5722"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_play"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_card8"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/bowlby_one_sc"
        android:text="@string/dealer_s_hand"
        android:textColor="#FF9800"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/iv_card8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.939" />

    <ImageView
        android:id="@+id/iv_chip_25"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/chip25"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.584"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.004"
        app:srcCompat="@drawable/green_chip" />

    <ImageView
        android:id="@+id/iv_card9"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginStart="90dp"
        android:contentDescription="@string/card9"
        android:maxWidth="35dp"
        android:maxHeight="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.621"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.112"
        app:srcCompat="@drawable/cover_blue" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/bowlby_one_sc"
        android:text="@string/place_your_bet"
        android:textColor="#FF9800"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_play"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_playerOut"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/iv_card1"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:contentDescription="@string/card1"
        android:maxWidth="35dp"
        android:maxHeight="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/iv_card3"
        app:layout_constraintHorizontal_bias="0.107"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.402"
        app:srcCompat="@drawable/cover_blue" />

    <ImageView
        android:id="@+id/iv_card7"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:contentDescription="@string/card7"
        android:maxWidth="35dp"
        android:maxHeight="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.276"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.112"
        app:srcCompat="@drawable/cover_blue" />

    <TextView
        android:id="@+id/tv_instructionOut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/bowlby_one_sc"
        android:text="press start to begin"
        android:textAlignment="center"
        android:textColor="@android:color/darker_gray"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/tv_winOut"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/iv_card5"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:contentDescription="@string/card5"
        android:maxWidth="35dp"
        android:maxHeight="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.946"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.402"
        app:srcCompat="@drawable/cover_blue" />

    <ImageView
        android:id="@+id/iv_card3"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginEnd="30dp"
        android:contentDescription="@string/card3"
        android:maxWidth="35dp"
        android:maxHeight="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.549"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.402"
        app:srcCompat="@drawable/cover_blue" />

    <ImageView
        android:id="@+id/iv_chip_5"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp"
        android:contentDescription="@string/chip5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.415"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.004"
        app:srcCompat="@drawable/red_chip" />

    <ImageView
        android:id="@+id/iv_card8"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginEnd="30dp"
        android:contentDescription="@string/card8"
        android:maxWidth="35dp"
        android:maxHeight="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.549"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.112"
        app:srcCompat="@drawable/cover_blue" />

    <TextView
        android:id="@+id/tv_playerHand"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/bowlby_one_sc"
        android:text="@string/your_hand"
        android:textColor="#FF9800"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/iv_card3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.991" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="100dp"
        android:fontFamily="@font/bowlby_one_sc"
        android:text="@string/bet"
        android:textAlignment="center"
        android:textColor="@android:color/darker_gray"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.982"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_chip_10" />

    <ImageView
        android:id="@+id/iv_card2"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:contentDescription="@string/card2"
        android:maxWidth="35dp"
        android:maxHeight="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.276"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.402"
        app:srcCompat="@drawable/cover_blue" />

    <ImageView
        android:id="@+id/iv_card4"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginStart="90dp"
        android:contentDescription="@string/card4"
        android:maxWidth="35dp"
        android:maxHeight="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.621"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.402"
        app:srcCompat="@drawable/cover_blue" />

    <ImageView
        android:id="@+id/iv_card6"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:clickable="false"
        android:contentDescription="@string/card6"
        android:focusable="auto"
        android:maxWidth="35dp"
        android:maxHeight="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/iv_card3"
        app:layout_constraintHorizontal_bias="0.107"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.112"
        app:srcCompat="@drawable/cover_blue" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="90dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/bowlby_one_sc"
        android:text="@string/chips"
        android:textAlignment="center"
        android:textColor="@android:color/darker_gray"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_chip_10" />

    <ImageView
        android:id="@+id/iv_chip_10"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/chip10"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.004"
        app:srcCompat="@drawable/blue_chip" />

    <ImageView
        android:id="@+id/iv_card10"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:contentDescription="@string/card10"
        android:maxWidth="35dp"
        android:maxHeight="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.946"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.112"
        app:srcCompat="@drawable/cover_blue" />

    <TextView
        android:id="@+id/tv_playerOut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/bowlby_one_sc"
        android:textColor="#FF5722"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_play"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_card3"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btn_play"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="30dp"
        android:backgroundTint="#FA602F"
        android:fontFamily="@font/bowlby_one_sc"
        android:text="Start"
        android:textColor="#F4F9FD"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_betOut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/bowlby_one_sc"
        android:textAlignment="center"
        android:textColor="@android:color/darker_gray"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/textView3"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/tv_chipsOut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/bowlby_one_sc"
        android:textAlignment="center"
        android:textColor="@android:color/darker_gray"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/textView4"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <ImageView
        android:id="@+id/iv_back"
        android:layout_width="32dp"
        android:layout_height="36dp"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.042"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/abc_vector_test" />


</androidx.constraintlayout.widget.ConstraintLayout>